force-app/main/default/objects/Credit_Detail__c/Credit_Detail__c.object-meta.xml
<CustomObject>
    <description>This object stores the Credit data information. The Data is coming from EDW via iPaaS.</description>
    <label>AR Detail</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Credit Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>