force-app/main/default/objects/Credit_Detail__c/fields/Account_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AR_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>