force-app/main/default/objects/Credit_Detail__c/fields/AR_Detail_Name__c.field-meta.xml
<CustomField>
    <fullName>AR_Detail_Name__c</fullName>
    <label>AR Detail Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>