force-app/main/default/objects/Credit_Detail__c/fields/Assigned_Collector__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Collector__c</fullName>
    <label>Primary Collector</label>
    <length>50</length>
    <type>Text</type>
</CustomField>