force-app/main/default/objects/Credit_Detail__c/fields/Customer_Account_Payable__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Payable__c</fullName>
    <description>Field for customer group email address.</description>
    <inlineHelpText>Field for customer group email address.</inlineHelpText>
    <label>Customer Account Payable</label>
    <type>TextArea</type>
</CustomField>