force-app/main/default/objects/Credit_Detail__c/fields/Dues_Notification_Status__c.field-meta.xml
<CustomField>
    <fullName>Dues_Notification_Status__c</fullName>
    <label>Dues Notification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notification Cycle Reset</fullName>
            </value>
            <value>
                <fullName>Stage 1 Notification Sent</fullName>
            </value>
            <value>
                <fullName>Stage 2 Notification Sent</fullName>
            </value>
            <value>
                <fullName>Stage 3 Notification Sent</fullName>
            </value>
            <value>
                <fullName>Stage 4 Notification Sent</fullName>
            </value>
            <value>
                <fullName>Notification not required</fullName>
                <isActive>false</isActive>
                <label>Notification not required</label>
            </value>
            <value>
                <fullName>Qualified for Stage 1 Notification Evaluation</fullName>
                <isActive>false</isActive>
                <label>Qualified for Stage 1 Notification Evaluation</label>
            </value>
            <value>
                <fullName>Qualified for Stage 2 Notification Evaluation</fullName>
                <isActive>false</isActive>
                <label>Qualified for Stage 2 Notification Evaluation</label>
            </value>
            <value>
                <fullName>Qualified for Stage 3 Notification Evaluation</fullName>
                <isActive>false</isActive>
                <label>Qualified for Stage 3 Notification Evaluation</label>
            </value>
            <value>
                <fullName>Qualified for Stage 4 Notification Evaluation</fullName>
                <isActive>false</isActive>
                <label>Qualified for Stage 4 Notification Evaluation</label>
            </value>
            <value>
                <fullName>Qualified for Stage 4 Reporting</fullName>
                <isActive>false</isActive>
                <label>Qualified for Stage 4 Reporting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>