force-app/main/default/objects/Credit_Detail__c/fields/Feedback_to_Collections__c.field-meta.xml
<CustomField>
    <fullName>Feedback_to_Collections__c</fullName>
    <inlineHelpText>Sales to provide comments/info to collector and any actions to be taken by Collector.</inlineHelpText>
    <label>Feedback to Collections</label>
    <type>TextArea</type>
</CustomField>