force-app/main/default/objects/Credit_Detail__c/fields/Is_Customer_a_Do_Not_Contact_customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_a_Do_Not_Contact_customer__c</fullName>
    <inlineHelpText>Prior to reaching out to customer, collaboration with the account owner is required.</inlineHelpText>
    <label>Collaboration with Acct Owner Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>