force-app/main/default/objects/Credit_Detail__c/fields/Is_Record_freeze_for_Notification__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_freeze_for_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to stop any type of overdue notification alert for next 15 days. Don&apos;t change the value of it.</description>
    <inlineHelpText>This field is used to stop any type of overdue notification alert for next 15 days. Don&apos;t change the value of it.</inlineHelpText>
    <label>Is Record freeze for Notification</label>
    <type>Checkbox</type>
</CustomField>