force-app/main/default/objects/Credit_Detail__c/fields/Last_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Notification_Date__c</fullName>
    <label>Last Notification Date</label>
    <type>Date</type>
</CustomField>