force-app/main/default/objects/Credit_Detail__c/fields/Not_Due_360_Days__c.field-meta.xml
<CustomField>
    <fullName>Not_Due_360_Days__c</fullName>
    <label>Not Due 360+ Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>