force-app/main/default/objects/Credit_Detail__c/fields/Past_due_046_to_060_days__c.field-meta.xml
<CustomField>
    <fullName>Past_due_046_to_060_days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Past_due_046_to_060_days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>