force-app/main/default/objects/Credit_Detail__c/fields/Prior_Value_of_Dues_Notification_Status__c.field-meta.xml
<CustomField>
    <fullName>Prior_Value_of_Dues_Notification_Status__c</fullName>
    <label>Prior Value of Dues Notification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notification Cycle Reset</fullName>
            </value>
            <value>
                <fullName>Stage 1 Notification Sent</fullName>
            </value>
            <value>
                <fullName>Stage 2 Notification Sent</fullName>
            </value>
            <value>
                <fullName>Stage 3 Notification Sent</fullName>
            </value>
            <value>
                <fullName>Qualified for Stage 4 Reporting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>