force-app/main/default/objects/Credit_Detail__c/fields/Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Risk_Level__c</fullName>
    <label>Risk Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>