force-app/main/default/objects/Credit_Detail__c/fields/Secondary_Collector__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Collector__c</fullName>
    <label>Secondary Collector</label>
    <length>50</length>
    <type>Text</type>
</CustomField>