force-app/main/default/objects/Credit_Detail__c/fields/Secondary_Collector_lookup__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Collector_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Collector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AR_Details5</relationshipName>
    <type>Lookup</type>
</CustomField>