force-app/main/default/objects/Credit_Detail__c/fields/Stage_1_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_1_Notification_Date__c</fullName>
    <label>Stage 1 Notification Date</label>
    <type>Date</type>
</CustomField>