force-app/main/default/objects/Credit_Detail__c/fields/Stage_2_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_2_Notification_Date__c</fullName>
    <label>Stage 2 Notification Date</label>
    <type>Date</type>
</CustomField>