force-app/main/default/objects/Credit_Detail__c/fields/Stage_3_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_3_Notification_Date__c</fullName>
    <label>Stage 3 Notification Date</label>
    <type>Date</type>
</CustomField>