force-app/main/default/objects/Credit_Detail__c/fields/What_is_their_status_on_payment_c__c.field-meta.xml
<CustomField>
    <fullName>What_is_their_status_on_payment_c__c</fullName>
    <label>What is their status on payment?</label>
    <type>TextArea</type>
</CustomField>