force-app/main/default/objects/Credit_Detail__c/fields/Who_did_you_speak_to__c.field-meta.xml
<CustomField>
    <fullName>Who_did_you_speak_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who did you speak to?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Credit_Details</relationshipName>
    <type>Lookup</type>
</CustomField>