force-app/main/default/objects/Credit_Detail__c/fields/X181_360_Days_Late__c.field-meta.xml
<CustomField>
    <fullName>X181_360_Days_Late__c</fullName>
    <label>Aging – 181-360</label>
    <precision>16</precision>
    <scale>2</scale>
    <trackHistory>false</trueHistory>
    <type>Number</type>
</CustomField>