force-app/main/default/objects/Credit_Detail__c/fields/X1_30_Days_Late__c.field-meta.xml
<CustomField>
    <fullName>X1_30_Days_Late__c</fullName>
    <label>Aging &lt; 31</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>