force-app/main/default/objects/Credit_Detail__c/fields/X361_Days_Late__c.field-meta.xml
<CustomField>
    <fullName>X361_Days_Late__c</fullName>
    <label>Aging &gt; 360</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>