force-app/main/default/objects/Credit_Detail__c/fields/X75_Days_past_due__c.field-meta.xml
<CustomField>
    <fullName>X75_Days_past_due__c</fullName>
    <formula>Past_due_76_to_90_days__c + Past_due_90_plus_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total 75 Days past due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>